# nova-lang

./: .dev_progress.json  .fullstack_dev_state.json  .gitignore  .llm_dev_state.json  AGENTS_LOG.md  AUTOMATION_README.md  AUTO_DEVELOP_LOG.md  AUTO_IMPROVE_LOG.md  AUTO_REVIEW_LOG.md  DEVELOPMENT_ROADMAP.md  FULLSTACK_DEV_LOG.md  FULLSTACK_ROADMAP.md  LLM_DEV_LOG.md  LLM_ROADMAP.md  README.md  __init__.py  __main__.py  _cli.py  _test_sync.md  ast_nodes.py  c_codegen.py  cli.py  compiler.py  compiler_cli.py  environment.py  errors.py  evaluator.py  lexer.py  modules.py  nova.py  parser.py  pyproject.toml  test.txt  type_checker.py  vm.py
.github/workflows/: ci.yml
backend/: common.py  compiler_pipeline.py  cranelift_backend.py  lir_c_backend.py  native_backend.py  wasm_backend.py  x86_64.py
backup/20260714_130239/: _cli.py  errors.py  parser.py
backup/20260714_130239/backend/: __init__.py  cranelift_backend.py
backup/20260714_130239/ir/: ir_nodes.py
backup/20260714_133523/: ast_nodes.py  environment.py  evaluator.py  type_checker.py  vm.py
backup/20260714_133523/backend/: native_backend.py  wasm_backend.py
backup/20260714_133523/ir/: __init__.py
backup/20260714_144726/: __init__.py  compiler.py  errors.py  evaluator.py  modules.py  type_checker.py
backup/20260714_144726/backend/: native_backend.py
backup/20260714_144726/ir/: hir_lowering.py  pass_manager.py
examples/: fibonacci.nova  file_io.nova  hello.nova  list_comprehension.nova  loops.nova  math.nova  pattern_match.nova  pipe.nova
examples/stdlib/: io.nova  math.nova
ir/: cfg_utils.py  hir_lowering.py  ir_nodes.py  lir_lowering.py  mir_lowering.py  pass_manager.py
runtime/: Makefile  nova_runtime.c  nova_runtime.h  test_runtime.c
runtime/std_impl/: datetime.nova  fs.nova  io.nova  json.nova  math.nova  net.nova  os.nova
scripts/: agents.py  append_improve.py  append_review.py  auto_develop.py  auto_improve.py  auto_review.py  commit_improve.sh  commit_review.sh  llm_dev_common.py
templates/basic/src/: main.nova
tests/: __init__.py  test_backends.py  test_c_codegen.py  test_consistency.py  test_depth_counter.py  test_errors.py  test_ir.py  test_modules.py  test_native_backend.py  test_nova.py  test_ssa_verifier.py  test_type_system.py
tests/benchmarks/: __init__.py  run_benchmarks.py  runner.py
tree-sitter-nova/: grammar.js  package.json
tree-sitter-nova/bindings/python/tree_sitter_nova/: __init__.py  binding.c
tree-sitter-nova/test/corpus/: adt.txt  basic.txt  lambda.txt  list_comprehension.txt  loops.txt  pipe.txt
