[build-system]
requires = ["setuptools>=83.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-lang"
version = "0.3.0"
description = "Nova - 表达式导向、强静态类型、函数式核心的编程语言"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nova Team"}
]
keywords = ["programming-language", "compiler", "functional", "type-system"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "ruff>=0.15.0"]
all = ["nova-lang[dev]"]

[project.scripts]
nova = "nova._cli:main"

[project.urls]
Homepage = "https://github.com/zhangzhangyitian966-create/nova-lang"
Documentation = "https://github.com/zhangzhangyitian966-create/nova-lang#readme"
Repository = "https://github.com/zhangzhangyitian966-create/nova-lang"

[tool.setuptools]
packages = [
    "nova",
    "nova.backend",
    "nova.ir",
]
package-dir = {"nova" = "."}

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
